--- a/app/src/main/res/layout/activity_chart_anime.xml
+++ b/app/src/main/res/layout/activity_chart_anime.xml
@@ -38,24 +38,9 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/menuButton"
-        app:layout_constraintStart_toEndOf="@+id/backButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/backButton"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/menuButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingVertical="10dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="0dp"
-        android:layout_marginEnd="8dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_baseline_menu_24"
-        app:layout_constraintBottom_toBottomOf="@+id/itemLayout"
-        app:layout_constraintEnd_toStartOf="@+id/itemLayout"
-        app:layout_constraintTop_toTopOf="@+id/itemLayout"
-        tools:ignore="ContentDescription" />
 
 
     <TextView
