--- a/app/src/main/res/layout/season_episode_item_layout.xml
+++ b/app/src/main/res/layout/season_episode_item_layout.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/airDateView"
+        android:id="@+id/relationType"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -66,7 +66,7 @@
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/episodeCountView"
-        app:layout_constraintTop_toBottomOf="@+id/airDateView" />
+        app:layout_constraintTop_toBottomOf="@+id/relationType" />
 
     <TextView
         android:id="@+id/episodeCountView"
@@ -78,7 +78,7 @@
         android:text="56"
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/airDateView" />
+        app:layout_constraintTop_toBottomOf="@+id/relationType" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
