--- a/app/src/main/res/layout/anime_theme_layout.xml
+++ b/app/src/main/res/layout/anime_theme_layout.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/themeName"
-    android:layout_margin="3dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="I Love Mostlysane"
-    android:textColor="@color/viewAnimeMainTextColor"
-    android:textSize="14sp"
-    android:textStyle="bold"/>
+    android:layout_margin="8dp"
+    android:background="@drawable/white_rectangle"
+    android:maxLines="3"
+    android:padding="16dp"
+    android:text="Mixed Nuts (ミックスナッツ) by Official HIGE DANdism (Official髭男dism)"
+    android:textColor="@color/listItemTitleTextColor"
+    android:textSize="16sp"
+    android:textStyle="bold"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
