--- a/app/src/main/res/layout/cast_item_layout.xml
+++ b/app/src/main/res/layout/cast_item_layout.xml
@@ -46,6 +46,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="sans-serif-medium"
         android:textSize="15sp"
+        android:maxLines="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/titleView" />
