--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_fade_effect">#8c000000</color>
-    <color name="listItemTitleTextColor">@color/textColor</color>
+<!--    <color name="listItemTitleTextColor">@color/textColor</color>-->
+    <color name="listItemTitleTextColor">@color/white</color>
     <color name="headingTextColor">#ADC0D1</color>
     <color name="cancelTextColor">@color/white</color>
     <color name="notScoredYet">@color/textColor</color>
