--- a/app/src/main/res/drawable/ic_baseline_view_module_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_view_module_24.xml
@@ -1,4 +1,4 @@
-<vector android:height="30dp" android:tint="#FFFFFF"
+<vector android:height="30dp" android:tint="@color/menuIcon"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="30dp" xmlns:android="http://schemas.android.com/apk/res/android">
   <path
