--- a/app/src/main/res/layout/trending_view_pager_layout_2.xml
+++ b/app/src/main/res/layout/trending_view_pager_layout_2.xml
@@ -25,14 +25,16 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/shade"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="-16dp"
+        android:rotationX="180"
         android:scaleType="centerCrop"
-        android:src="@drawable/fade_effect2"
+        android:src="@drawable/custom_fade_effect"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/animeTitle"
         app:shapeAppearanceOverlay="@style/backgroundPosterView" />
 
 
@@ -40,14 +42,14 @@
         android:id="@+id/ratingView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="8.85"
         android:textColor="#ffef00"
         android:textSize="12sp"
         app:drawableStartCompat="@drawable/ic_baseline_star_24"
         app:drawableTint="#ffef00"
-        app:layout_constraintStart_toStartOf="@+id/animeTitle"
-        app:layout_constraintTop_toBottomOf="@+id/animeTitle" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/animeTitle" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/posterView2"
@@ -68,8 +70,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:fontFamily="@font/bold"
         android:gravity="start"
@@ -79,16 +81,16 @@
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/ratingView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/posterView2"
-        app:layout_constraintTop_toTopOf="@+id/posterView2" />
+        app:layout_constraintStart_toEndOf="@+id/posterView2" />
 
     <TextView
         android:id="@+id/formatView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="start"
         android:maxLines="3"
@@ -96,27 +98,8 @@
         android:textAllCaps="true"
         android:textColor="#bfffffff"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/ratingView3"
-        app:layout_constraintTop_toBottomOf="@+id/animeTitle" />
-
-    <TextView
-        android:id="@+id/genresView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="5dp"
-        android:baselineAligned="false"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="start"
-        android:maxLines="2"
-        android:text="Action,Historical,military"
-        android:textAllCaps="true"
-        android:textColor="#bfffffff"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/posterView2"
-        app:layout_constraintTop_toBottomOf="@+id/ratingView3" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ratingView3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
