--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="dark_fade_effect">#8c000000</color>
+    <color name="menuIcon">@color/white</color>
+    <color name="dark_fade_effect">#80000000</color>
 <!--    <color name="listItemTitleTextColor">@color/textColor</color>-->
     <color name="listItemTitleTextColor">@color/white</color>
     <color name="headingTextColor">#ADC0D1</color>
@@ -33,6 +34,7 @@
     <color name="bgWhite">#121212</color>
     <color name="transparentBlue">#902F80ED</color>
     <color name="transparentBlue2">#352F80ED</color>
+    <color name="contentBackground">#ECEFF1</color>
     <color name="green">#82D75F</color>
     <color name="textColor">@color/searchBarIconColor</color>
 <!--    <color name="textColor">#647380</color>-->
